# easy-agent

./: .gitignore  README.md  pyproject.toml
src/core/: __init__.py  agent_loop.py  cli_output.py  common_output.py  common_resources.py  config_manager.py  main.py  session_runner.py  skill_manager.py  slash_commands.py  tool_registry.py
src/core/commands/: __init__.py  clear.py  compact.py  config.py  copy.py  exit.py  help.py  jobs.py  model.py  skills.py  tokens.py  tools.py
src/core/config/: __init__.py  config_manager.py
src/core/context/: __init__.py  agents_instructions.py  compression.py  skill_manager.py
src/core/mcp/: __init__.py  registry.py
src/core/terminal/: __init__.py  cli_output.py  input_reader.py  prompt_ui.py
src/core/tools/: __init__.py  ask_user_question.py  bash.py  common.py  compact.py  edit_file.py  glob.py  grep.py  read_file.py  shell.py  web_fetch.py  web_utils.py  write_file.py
src/core/utils/: history_items.py  session_runner_utils.py
src/test/: s08_background_tasks.py
