[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_agent"
version = "0.0.2"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.30.0",
]

[project.scripts]
myagent = "core.agent_loop:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*"]
