[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-agent"
version = "1.0.1"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.30.0",
]

[project.scripts]
ea = "core.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*"]
