[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-agent"
version = "1.0.2"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.10.0",
    "openai>=2.30.0",
    "prompt_toolkit>=3.0.52",
]

[project.scripts]
ea = "core.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
core = ["vendor/ripgrep/**/*"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*"]
